# alexsnowschool-business.github.io

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  script.js  styles.css  walkthrough.md
accounts/: deepthought.yaml  foundermind.yaml  lifequoteshere.yaml  quartercrisis.yaml  stoicdaily.yaml
art-archive/: CLAUDE.md  analysis.html  analysis.json  catalogue.json  index.html
art-research/: CLAUDE.md  benjamin.html  bourdieu.html  greenberg.html  index.html  kant.html  research.json  script.js  styles.css
data/: .gitignore  art.db  deepthought_quotes.db  foundermind_quotes.db  quartercrisis_quotes.db  quotes.db  staged_profiles.json  stoicdaily_quotes.db
docs/: analytics-roadmap.md
draft/: beat-the-estimate.yml
hermes-archive/: CLAUDE.md  analysis.html  analysis.json  catalogue.json  index.html
hermes-research/: index.html  reader.html  script.js  styles.css
provenance/: index.html  script.js  styles.css
reel_template/: make_captions.py  make_reel.py
research-docs/: ART_MARKET_BUSINESS_STRATEGY.md  AUTHENTICATION_TECH_RESEARCH.md  BOURDIEU_ANALYSIS.md  BUSINESS_RESEARCH.md  COMPETITOR_ANALYSIS.md  DATA_COLLECTION_RESEARCH.md  HERMES_SOCIAL_HISTORY.md  OBSERVATIONS.md  STUDY_PLAN.md  analytics-roadmap.md  thehammerprice-competitor-analysis-2026-05-24.md
scraper/: art_db.py  artprice.py  christies.py  db.py  ebay.py  goodreads_scraper.py  hermes.py  kettererkunst.py  phillips.py  sothebys.py  utils.py  vestiaire.py  vinted.py
scripts/: account_config.py  ai_content.py  art_reel.py  artist_profiles.json  auto_reel.py  (+31 more)
(+2766 files in other folders)
