[project]
name = "hermes-archive-scraper"
version = "0.1.0"
description = "Hermès Archive scraper — authentic + counterfeit data collection"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "tqdm>=4.66",
    "playwright>=1.40",
    "scrapling[fetchers]>=0.2",
    "anthropic>=0.40",
]

[tool.uv]
package = false
