[project]
name = "thehammerprice-reel-pipeline"
version = "0.1.0"
description = "The Hammer Price — reel generation, AI content, and Buffer posting pipeline"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "edge-tts>=6.1",
    "anthropic>=0.40",
    "tqdm>=4.66",
    "playwright>=1.40",
]

[tool.uv]
package = false
