[project]
name = "thehammerprice-reel-pipeline"
version = "0.1.0"
description = "The Hammer Price — reel generation, AI content, and Buffer posting pipeline"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "edge-tts>=6.1",
    "anthropic>=0.40",
    "tqdm>=4.66",
    "playwright>=1.40",
    "patchright>=1.58",
    "scrapling>=0.4.8",
    "curl-cffi>=0.7",
    "msgspec>=0.18",
    "browserforge>=0.4",
    "elevenlabs>=2.51.0",
    "pytumblr>=0.1.0",
    "requests-oauthlib>=1.3",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
